# angular-app/SeaDuel/src/swagger/model/boat.ts
@@ -3,34 +3,43 @@
  * SeaDuelServer
  *
  * OpenAPI spec version: 1.0.0
- *
+ * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
 
+
 export interface Boat {
-  x?: number;
-  y?: number;
-  direction?: Boat.DirectionEnum;
-  type?: Boat.TypeEnum;
+    /**
+     * X position of the boat
+     */
+    x: number;
+    /**
+     * Y position of the boat
+     */
+    y: number;
+    /**
+     * Direction of the boat, it will be placed towards positive axis value (right or down)
+     */
+    direction: Boat.DirectionEnum;
+    /**
+     * See documentation for boat sizes
+     */
+    type: Boat.TypeEnum;
 }
 export namespace Boat {
-  export type DirectionEnum = "Vertical" | "Horizontal";
-  export const DirectionEnum = {
-    Vertical: "Vertical" as DirectionEnum,
-    Horizontal: "Horizontal" as DirectionEnum
-  };
-  export type TypeEnum =
-    | "Destroyer"
-    | "Submarine"
-    | "Battleship"
-    | "AircraftCarrier";
-  export const TypeEnum = {
-    Destroyer: "Destroyer" as TypeEnum,
-    Submarine: "Submarine" as TypeEnum,
-    Battleship: "Battleship" as TypeEnum,
-    AircraftCarrier: "AircraftCarrier" as TypeEnum
-  };
+    export type DirectionEnum = 'Vertical' | 'Horizontal';
+    export const DirectionEnum = {
+        Vertical: 'Vertical' as DirectionEnum,
+        Horizontal: 'Horizontal' as DirectionEnum
+    }
+    export type TypeEnum = 'Destroyer' | 'Submarine' | 'Battleship' | 'AircraftCarrier';
+    export const TypeEnum = {
+        Destroyer: 'Destroyer' as TypeEnum,
+        Submarine: 'Submarine' as TypeEnum,
+        Battleship: 'Battleship' as TypeEnum,
+        AircraftCarrier: 'AircraftCarrier' as TypeEnum
+    }
 }
