# backend/SeaDuelServer/server/common/swagger/Api.yaml
@@ -33,6 +33,9 @@ definitions:
   Login:
     type: object
     title: Login
+    required:
+      - id
+      - password
     properties:
       id:
         type: string
@@ -68,27 +71,47 @@ definitions:
           - online
       wonGames:
         type: number
+        description: "Won or opponent resigned"
       lostGames:
         type: number
         description: "Lost or withdrawn"
       position:
         type: number
-        description: "Position in ranking"
+        description: "Position in ranking, calculated with won and lost games ratio"
       lastActivity:
         type: string
         format: "date-time"
         description: "Last http request made by user, for online check"
       playing:
         type: boolean
+        description: "True if the user is playing a game with someone"
+      hasUnreadMessages:
+        type: boolean
+        description: "True if there are messages coming from that user"
+      hasUnreadGames:
+        type: boolean
+        description: "True if there are games coming from that user"
 
   Game:
     type: object
     title: Game
+    required:
+      - playerId
+      - opponentId
+      - winnerId
+      - playerBoard
+      - opponentBoard
+      - playerReady
+      - opponentReady
+      - startTime
+      - availableBoats
     properties:
       playerId:
         type: string
+        description: "Your user id"
       opponentId:
         type: string
+        description: "The opponent user id"
       state:
         type: string
         enum:
@@ -100,19 +123,28 @@ definitions:
           - Ended
       winnerId:
         type: string
-        description: "UserId of the winner, -1 if still playing"
+        description: "UserId of the winner, null if still playing or game never started"
       playerBoard:
         type: object
         title: PlayerBoard
+        required:
+          - width
+          - height
+          - boardData
         properties:
           width:
             type: number
+            description: "10 by default"
           height:
             type: number
+            description: "10 by default"
           boardData:
             type: array
             items:
               type: object
+              required:
+                - type
+                - checked
               properties:
                 type:
                   type: string
@@ -124,18 +156,27 @@ definitions:
                     - AircraftCarrier
                 checked:
                   type: boolean
+                  description: "True if that cell was attacked by the opponent"
       opponentBoard:
         type: object
         title: OpponentBoard
+        required:
+          - width
+          - height
+          - boardData
         properties:
           width:
             type: number
+            description: "10 by default"
           height:
             type: number
+            description: "10 by default"
           boardData:
             type: array
             items:
               type: object
+              required:
+                - type
               properties:
                 type:
                   type: string
@@ -156,8 +197,12 @@ definitions:
         description: "Time when the game first started"
       availableBoats:
         type: array
+        description: "Boats available to position"
         items:
           type: object
+          required:
+            - type
+            - amount
           properties:
             type:
               type: string
@@ -168,20 +213,30 @@ definitions:
                 - AircraftCarrier
             amount:
               type: number
+              description: "Numbers of boats of that kind available"
 
   Message:
     type: object
     title: Message
+    required:
+     - content
+     - time
+     - senderId
+     - recipientId
     properties:
       content:
         type: string
+        description: "The body of the message"
       time:
         type: string
         format: "date-time"
+        description: "When the message have been received by the server"
       senderId:
         type: string
+        description: "User id of the sender"
       recipientId:
         type: string
+        description: "User id of the receiver"
 
 paths:
   /auth/login:
@@ -195,29 +250,20 @@ paths:
           description: "Login credentials"
           schema:
             $ref: "#/definitions/Login"
-      description: "Gets a token from username and password"
+      description: "Gets a new signed token from username and password"
       responses:
         200:
           description: "Logged in"
           schema:
             type: string
+            description: "The token"
         403:
           description: "Invalid credentials"
-  /auth/checkToken:
-    post:
+    get:
       tags:
         - Authentication
-      parameters:
-        - name: body
-          in: body
-          required: true
-          description: "Auth token"
-          schema:
-            type: object
-            title: AuthObject
-            properties:
-              token:
-                type: string
+      security:
+        - Bearer: []
       description: "Checks a token validity"
       responses:
         200:
@@ -231,7 +277,7 @@ paths:
         - Users
       security:
         - Bearer: []
-      description: "Get the list of all the users"
+      description: "Get the list of all the registered users, requires admin privileges"
       responses:
         200:
           description: "Return all the users"
@@ -252,6 +298,10 @@ paths:
           schema:
             type: object
             title: NewUser
+            required:
+              - id
+              - email
+              - password
             properties:
               id:
                 type: string
@@ -283,12 +333,12 @@ paths:
         - name: id
           in: path
           required: true
-          description: "The start of the user id to find"
+          description: "The first characters of the user id to find"
           type: string
-      description: "Find user by the start of user id"
+      description: "Find user by user id"
       responses:
         200:
-          description: "Return the users"
+          description: "Return all the matching users"
           schema:
             type: array
             items:
@@ -329,7 +379,7 @@ paths:
           required: true
           description: "The id of the user to delete"
           type: string
-      description: "Delete an user"
+      description: "Delete an user, requires admin privileges"
       responses:
         200:
           description: "User deleted"
@@ -354,7 +404,7 @@ paths:
           description: "The fields to update, leave password empty to not edit"
           schema:
             $ref: "#/definitions/User"
-      description: "Update user info"
+      description: "Update user info, requires admin privileges or to be the same user"
       responses:
         200:
           description: "User updated successfully"
@@ -403,7 +453,7 @@ paths:
         - Users
       security:
         - Bearer: []
-      description: "Get the top 10 users"
+      description: "Get the ranking top 10 users"
       responses:
         200:
           description: "Return the users"
@@ -456,10 +506,12 @@ paths:
           schema:
             type: object
             title: MessageObject
+            required:
+              - content
             properties:
               content:
                 type: string
-      description: "Sends a message to the user"
+      description: "Sends a message to an user"
       responses:
         200:
           description: "Message sent successfully, returns the message"
@@ -480,7 +532,7 @@ paths:
           required: true
           description: "The user id of the opponent"
           type: string
-      description: "Get the game coming from an user"
+      description: "Get the game status with the specified opponent"
       responses:
         200:
           description: "Return the game"
@@ -504,9 +556,7 @@ paths:
       description: "Send a new game request to an user"
       responses:
         200:
-          description: "Game request sent successfully, returns the game"
-          schema:
-            $ref: "#/definitions/Game"
+          description: "Game request sent successfully"
         409:
           description: "Game already started"
         404:
@@ -524,10 +574,10 @@ paths:
           required: true
           description: "The user id of the opponent"
           type: string
-      description: "Accept a game request"
+      description: "Accept a game request from an user"
       responses:
         200:
-          description: "Game accepted"
+          description: "Game accepted successfully"
         404:
           description: "Game not found"
         403:
@@ -543,7 +593,7 @@ paths:
           required: true
           description: "The user id of the opponent"
           type: string
-      description: "Resign from a game"
+      description: "Resign from a game, that game will be counted as lost for the user and won for the opponent"
       responses:
         200:
           description: "Resigned succesfully"
@@ -571,18 +621,27 @@ paths:
           schema:
             type: object
             title: Boat
+            required:
+              - x
+              - y
+              - direction
+              - type
             properties:
               x:
                 type: number
+                description: "X position of the boat"
               y:
                 type: number
+                description: "Y position of the boat"
               direction:
                 type: string
+                description: "Direction of the boat, it will be placed towards positive axis value (right or down)"
                 enum:
                   - Vertical
                   - Horizontal
               type:
                 type: string
+                description: "See documentation for boat sizes"
                 enum:
                   - Destroyer
                   - Submarine
@@ -614,15 +673,19 @@ paths:
         - name: body
           in: body
           required: true
-          description: "The boat to add"
           schema:
             type: object
             title: Move
+            required:
+              - x
+              - y
             properties:
               x:
                 type: number
+                description: "X position to fire"
               y:
                 type: number
+                description: "Y position to fire"
       description: "Fires a shot into the opponent board"
       responses:
         200:
